--- a/webapp/src/app/ph-elements/ph-window/ph-window.component.html
+++ b/webapp/src/app/ph-elements/ph-window/ph-window.component.html
@@ -1,4 +1,10 @@
+<div class="titlebar">
+    <div class="title">
+        {{title}}
+    </div>
+</div>
 
+<!-- 
 <div class="container">
     <div class="tr">
         <div class="bar"></div>
@@ -15,4 +21,4 @@
 
 <div class="shader">
     
-</div>
+</div> -->
