--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -1,5 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+    font-family: 'Fira Code';
+    src: url('assets/fonts/FiraCode/FiraCode-Regular.ttf')
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url('assets/fonts/FiraCode/FiraCode-Medium.ttf');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url('assets/fonts/FiraCode/FiraCode-Light.ttf');
+    font-weight: 300;
+}
+
 html, body {
     margin: 0;
     padding: 0;
