--- a/webapp/src/app/app.component.scss
+++ b/webapp/src/app/app.component.scss
@@ -9,4 +9,13 @@ div.dashboard {
 
     position: absolute;
     inset: 0;
+
+    div.workspace {
+        grid-row: 2;
+        grid-column: 2;
+        
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+    }
 }
