--- a/webapp/src/app/ph-elements/ph-window/ph-window.component.html
+++ b/webapp/src/app/ph-elements/ph-window/ph-window.component.html
@@ -1,7 +1,13 @@
-<div class="titlebar">
+<div class="title-bar">
     <div class="title">
         {{title}}
     </div>
+    <div class="subtitle">
+        {{subtitle}}
+    </div>
+</div>
+<div class="workspace">
+
 </div>
 
 <!-- 
