Prepared components for formulars

--- a/webapp/src/app/ph-elements/ph-window/ph-window.component.scss
+++ b/webapp/src/app/ph-elements/ph-window/ph-window.component.scss
@@ -18,13 +18,14 @@ div.title-bar {
         line-height: 33px;
         margin-left: 12px;
         color: white;
+        word-spacing: -4px;
     }
     div.subtitle {
         font-family: 'Fira Code';
         font-size: 10px;
         line-height: 34px;
         color: #a9aaac;
-        margin-left: 2px;
+        margin-left: 3px;
     }
 }
 
