--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -2,6 +2,6 @@
     <ph-topbar style="grid-row: 1; grid-column: 2;"></ph-topbar>
     <ph-sidebar style="grid-row: 1 / 3; grid-column: 1;"></ph-sidebar>
     <div class="workspace">
-        <ph-window [title]="'REACTOR'" [subtitle]="'TR2805'" style="grid-row:1/3; grid-column: 1/3"></ph-window>
+        <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/3; grid-column: 1/3"></ph-window>
     </div>
 </div>
