Added some button list functionality

--- a/webapp/src/app/ph-elements/ph-button-list/ph-button-list.component.html
+++ b/webapp/src/app/ph-elements/ph-button-list/ph-button-list.component.html
@@ -1,5 +1,6 @@
-<div>
-    <div class="button" *ngFor="const option of optionList">
-        
-    </div>
+<div class="label">
+    {{label}}
+</div>
+<div class="list">
+    <ng-content></ng-content>
 </div>
