--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -2,15 +2,22 @@
     <ph-topbar style="grid-row: 1; grid-column: 2;"></ph-topbar>
     <ph-sidebar style="grid-row: 1 / 3; grid-column: 1;"></ph-sidebar>
     <div class="workspace">
-        <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/3; grid-column: 1/4">
+        <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/2; grid-column: 1/4">
             <ph-form>
-                <ph-button-list [label]="'State'">
-                    <ph-button>OFFLINE</ph-button>
-                    <ph-button>CRITICAL</ph-button>
-                    <ph-button>LOW</ph-button>
-                    <ph-button>NORMAL</ph-button>
-                </ph-button-list>
+                <ph-button-select [label]="'State'">
+                    <ph-button [value]="'offline'">OFFLINE</ph-button>
+                    <ph-button [value]="'critical'">CRITICAL</ph-button>
+                    <ph-button [value]="'low'">LOW</ph-button>
+                    <ph-button [value]="'normal'">NORMAL</ph-button>
+                </ph-button-select>
+                <ph-command-list [label]="'Play Warning'">
+                    <ph-button>HEAT</ph-button>
+                    <ph-button>PRESSURE</ph-button>
+                </ph-command-list>
             </ph-form>
+        </ph-window>
+        <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:2/4; grid-column: 1/4">
+       
         </ph-window>
     </div>
 </div>
