--- a/webapp/src/app/ph-elements/ph-button-select/ph-button-select.component.scss
+++ b/webapp/src/app/ph-elements/ph-button-select/ph-button-select.component.scss
@@ -1,4 +1,5 @@
 :host {
+
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr;
@@ -16,6 +17,7 @@
         padding-left: 4px;
         padding-top: 1px;
 
+        user-select: none;
     }
 
     div.list {
