--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -2,7 +2,7 @@
     <ph-topbar style="grid-row: 1; grid-column: 2;"></ph-topbar>
     <ph-sidebar style="grid-row: 1 / 3; grid-column: 1;"></ph-sidebar>
     <div class="workspace">
-        <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/2; grid-column: 1/4">
+        <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/3; grid-column: 1/6">
             <ph-form>
                 <ph-button-select [label]="'State'">
                     <ph-button [value]="'offline'">OFFLINE</ph-button>
@@ -16,8 +16,8 @@
                 </ph-command-list>
             </ph-form>
         </ph-window>
-        <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:2/4; grid-column: 1/4">
-       
+        <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:3/10; grid-column: 1/6">
+            <app-power-control></app-power-control>
         </ph-window>
     </div>
 </div>
