Added clickable areas to svg

--- a/webapp/src/app/power-control/power-control.component.html
+++ b/webapp/src/app/power-control/power-control.component.html
@@ -7,6 +7,7 @@
 	.st3{fill:#42A1DA;}
 	.st4{fill:#42A1DA;stroke:#42A1DA;stroke-width:2;stroke-linecap:square;stroke-miterlimit:10;}
 	.st5{fill:#42A1DA;stroke:#42A1DA;stroke-width:2;stroke-miterlimit:10;}
+	.btn{fill: rgba(0, 0, 0, 0)}
 </style>
 <g id="Ebene_2">
 	<line class="st0" x1="19.61" y1="166.32" x2="193.03" y2="166.32"/>
@@ -115,5 +116,10 @@
 	<circle class="st3" cx="278.1" cy="154.42" r="1.81"/>
 	<circle class="st3" cx="278.1" cy="154.42" r="1.81"/>
 	<circle class="st3" cx="278.1" cy="154.42" r="1.81"/>
+</g>
+<g>
+	<circle class="btn" cx="278.1" cy="154.42" r="4"/>
+	<circle class="btn" cx="440.13" cy="187.26" r="4"/>
+	<circle class="btn" cx="440.13" cy="277.91" r="4"/>
 </g>
 </svg>
