Added lower base powergrid

--- a/webapp/src/app/power-control/power-control.component.html
+++ b/webapp/src/app/power-control/power-control.component.html
@@ -1,4 +1,4 @@
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="738.585"
 	 viewBox="0 0 492.39 309.68" style="enable-background:new 0 0 492.39 309.68;" xml:space="preserve">
 <style type="text/css">
 	.st0{fill:none;stroke:#AFAFAF;stroke-width:0.75;stroke-miterlimit:10;}
@@ -121,5 +121,87 @@
 	<circle class="btn" cx="278.1" cy="154.42" r="4" (click)="poweredStateBaseMedicine = !poweredStateBaseMedicine"/>
 	<circle class="btn" cx="440.13" cy="187.26" r="4" (click)="poweredStateUpperRight = !poweredStateUpperRight"/>
 	<circle class="btn" cx="440.13" cy="277.91" r="4" (click)="poweredStateUpperLeft = !poweredStateUpperLeft"/>
+</g>
+</svg>
+
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="891.75"
+	 viewBox="0 0 615 168" style="enable-background:new 0 0 615 168; margin-left: auto;margin-right: auto;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:none;stroke:#AFAFAF;stroke-width:0.75;stroke-linecap:square;stroke-miterlimit:10;}
+	.st1{fill:none;stroke:#AFAFAF;stroke-width:0.75;stroke-miterlimit:10;}
+	.st2{fill:none;stroke:#42A1DA;stroke-linecap:square;stroke-miterlimit:10;}
+	.st3{fill:#42A1DA;}
+	.st4{fill:none;stroke:#42A1DA;stroke-width:2;stroke-linecap:square;stroke-miterlimit:10;}
+</style>
+<g id="UG1">
+	<line class="st0" x1="601.16" y1="14.5" x2="601.16" y2="151.5"/>
+	<line class="st0" x1="601.06" y1="14.48" x2="42.5" y2="14.48"/>
+	<line class="st1" x1="42.5" y1="14.5" x2="42.5" y2="67.5"/>
+	<line class="st0" x1="67.5" y1="151.5" x2="81.5" y2="151.5"/>
+	<line class="st0" x1="600.5" y1="151.5" x2="97.5" y2="151.5"/>
+	<line class="st0" x1="365.5" y1="14.5" x2="365.5" y2="67.5"/>
+	<line class="st0" x1="365.5" y1="97.5" x2="365.5" y2="151.5"/>
+	<line class="st0" x1="99.5" y1="14.5" x2="99.5" y2="66.5"/>
+	<line class="st0" x1="110.5" y1="66.5" x2="99.5" y2="66.5"/>
+	<line class="st0" x1="120.5" y1="66.5" x2="132.5" y2="66.5"/>
+	<line class="st0" x1="132.5" y1="14.5" x2="132.5" y2="66.5"/>
+	<line class="st0" x1="99.5" y1="151.5" x2="99.5" y2="98.5"/>
+	<line class="st0" x1="111.5" y1="98.5" x2="99.5" y2="98.5"/>
+	<line class="st0" x1="120.5" y1="98.5" x2="132.5" y2="98.5"/>
+	<line class="st0" x1="132.5" y1="151.5" x2="132.5" y2="98.5"/>
+	<line class="st1" x1="13.5" y1="67.5" x2="42.5" y2="67.5"/>
+	<line class="st0" x1="13.5" y1="98.5" x2="13.5" y2="67.5"/>
+	<line class="st0" x1="13.5" y1="98.5" x2="67.5" y2="98.5"/>
+	<line class="st0" x1="67.5" y1="98.5" x2="67.5" y2="151.5"/>
+	<rect x="176" y="97" class="st0" width="4" height="4"/>
+	<rect x="223" y="97" class="st0" width="4" height="4"/>
+	<rect x="270" y="97" class="st0" width="4" height="4"/>
+	<rect x="317" y="97" class="st0" width="4" height="4"/>
+	<rect x="409" y="97" class="st0" width="4" height="4"/>
+	<rect x="456" y="97" class="st0" width="4" height="4"/>
+	<rect x="503" y="97" class="st0" width="4" height="4"/>
+	<rect x="550" y="97" class="st0" width="4" height="4"/>
+	<rect x="550" y="65" class="st0" width="4" height="4"/>
+	<rect x="503" y="65" class="st0" width="4" height="4"/>
+	<rect x="456" y="65" class="st0" width="4" height="4"/>
+	<rect x="409" y="65" class="st0" width="4" height="4"/>
+	<rect x="270" y="65" class="st0" width="4" height="4"/>
+	<rect x="176" y="65" class="st0" width="4" height="4"/>
+	<rect x="223" y="65" class="st0" width="4" height="4"/>
+	<rect x="317" y="65" class="st0" width="4" height="4"/>
+</g>
+<g id="UG1_x5F_PL">
+	<circle class="st2" cx="153.15" cy="127.9" r="3.61"/>
+	<circle class="st3" cx="153.15" cy="127.9" r="2.23"/>
+	<line class="st4" x1="157.57" y1="127.9" x2="590.61" y2="127.9"/>
+	<circle class="st3" cx="590.77" cy="127.9" r="2.23"/>
+	<circle class="st2" cx="154.36" cy="39.74" r="3.61"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="2.23"/>
+	<line class="st4" x1="158.78" y1="39.74" x2="591.81" y2="39.74"/>
+	<circle class="st3" cx="591.97" cy="39.74" r="2.23"/>
+</g>
+<g id="UG1_P1" [ngClass]="{'hidden': !poweredStateLowerRight}">
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+	<circle class="st3" cx="153.18" cy="127.99" r="1.81"/>
+</g>
+<g id="UG1_P2" [ngClass]="{'hidden': !poweredStateLowerLeft}">
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
+</g>
+<g>
+	<circle class="btn" cx="154.36" cy="39.74" r="4" (click)="poweredStateLowerLeft = !poweredStateLowerLeft"/>
+	<circle class="btn" cx="153.18" cy="127.99" r="4" (click)="poweredStateLowerRight = !poweredStateLowerRight"/>
 </g>
 </svg>
