--- a/webapp/src/app/power-control/power-control.component.scss
+++ b/webapp/src/app/power-control/power-control.component.scss
@@ -1,5 +1,8 @@
 :host {
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 @keyframes move1 {
@@ -49,6 +52,15 @@
     }
 }
 
+@keyframes moveUG {
+    0% { 
+        transform: translate3d(0, 0, 0);
+    }
+    100% {
+        transform: translate3d(71%, 0, 0);
+    }
+}
+
 #Ebene_5 {
     animation: move1 2s  linear infinite;
 }
@@ -80,6 +92,60 @@
     // circle:nth-child(4) {
     //     animation-delay: -2.7s;
     // }
+}
+
+#UG1_P2 {
+    circle {
+        animation: moveUG 14s  linear infinite;
+    }
+    circle:nth-child(2) {
+        animation-delay: -1.75s;
+    }
+    circle:nth-child(3) {
+        animation-delay: -3.5s;
+    }
+    circle:nth-child(4) {
+        animation-delay: -5.25s;
+    }
+    circle:nth-child(5) {
+        animation-delay: -7s;
+    }
+    circle:nth-child(6) {
+        animation-delay: -8.75s;
+    }
+    circle:nth-child(7) {
+        animation-delay: -10.5s;
+    }
+    circle:nth-child(8) {
+        animation-delay: -12.25s;
+    }
+}
+
+#UG1_P1 {
+    circle {
+        animation: moveUG 14s  linear infinite;
+    }
+    circle:nth-child(2) {
+        animation-delay: -1.75s;
+    }
+    circle:nth-child(3) {
+        animation-delay: -3.5s;
+    }
+    circle:nth-child(4) {
+        animation-delay: -5.25s;
+    }
+    circle:nth-child(5) {
+        animation-delay: -7s;
+    }
+    circle:nth-child(6) {
+        animation-delay: -8.75s;
+    }
+    circle:nth-child(7) {
+        animation-delay: -10.5s;
+    }
+    circle:nth-child(8) {
+        animation-delay: -12.25s;
+    }
 }
 
 .hidden {
