--- a/webapp/src/app/power-control/power-control.component.html
+++ b/webapp/src/app/power-control/power-control.component.html
@@ -118,9 +118,9 @@
 	<circle class="st3" cx="278.1" cy="154.42" r="1.81"/>
 </g>
 <g>
-	<circle class="btn" cx="278.1" cy="154.42" r="4" (click)="poweredStateBaseMedicine = !poweredStateBaseMedicine"/>
-	<circle class="btn" cx="440.13" cy="187.26" r="4" (click)="poweredStateUpperRight = !poweredStateUpperRight"/>
-	<circle class="btn" cx="440.13" cy="277.91" r="4" (click)="poweredStateUpperLeft = !poweredStateUpperLeft"/>
+	<circle class="btn" cx="278.1" cy="154.42" r="4" (click)="poweredStateBaseMedicine = !poweredStateBaseMedicine; updateServerPowerGridState()"/>
+	<circle class="btn" cx="440.13" cy="187.26" r="4" (click)="poweredStateUpperRight = !poweredStateUpperRight; updateServerPowerGridState()"/>
+	<circle class="btn" cx="440.13" cy="277.91" r="4" (click)="poweredStateUpperLeft = !poweredStateUpperLeft; updateServerPowerGridState()"/>
 </g>
 </svg>
 
@@ -201,7 +201,7 @@
 	<circle class="st3" cx="154.36" cy="39.74" r="1.81"/>
 </g>
 <g>
-	<circle class="btn" cx="154.36" cy="39.74" r="4" (click)="poweredStateLowerLeft = !poweredStateLowerLeft"/>
-	<circle class="btn" cx="153.18" cy="127.99" r="4" (click)="poweredStateLowerRight = !poweredStateLowerRight"/>
+	<circle class="btn" cx="154.36" cy="39.74" r="4" (click)="poweredStateLowerLeft = !poweredStateLowerLeft; updateServerPowerGridState()"/>
+	<circle class="btn" cx="153.18" cy="127.99" r="4" (click)="poweredStateLowerRight = !poweredStateLowerRight; updateServerPowerGridState()"/>
 </g>
 </svg>
