--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -3,18 +3,7 @@
     <ph-sidebar style="grid-row: 1 / 3; grid-column: 1;"></ph-sidebar>
     <div class="workspace">
         <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/3; grid-column: 1/8">
-            <ph-form>
-                <ph-button-select [label]="'State'">
-                    <ph-button [value]="'offline'">OFFLINE</ph-button>
-                    <ph-button [value]="'critical'">CRITICAL</ph-button>
-                    <ph-button [value]="'low'">LOW</ph-button>
-                    <ph-button [value]="'normal'">NORMAL</ph-button>
-                </ph-button-select>
-                <ph-command-list [label]="'Play Warning'">
-                    <ph-button>HEAT</ph-button>
-                    <ph-button>PRESSURE</ph-button>
-                </ph-command-list>
-            </ph-form>
+            <app-power-plant></app-power-plant>
         </ph-window>
         <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:3/13; grid-column: 1/8">
             <app-power-control></app-power-control>
