Added auth component html and ph-input

--- a/webapp/src/app/auth/auth.component.html
+++ b/webapp/src/app/auth/auth.component.html
@@ -1,1 +1,8 @@
-<p>auth works!</p>
+<div class="dashboard">
+    <ph-window [title]="'Authentication'" style="grid-row:7/9; grid-column: 7/11">
+        <ph-form>
+            <ph-input [label]="'USERID'"></ph-input>
+            <ph-input [label]="'PASSWORD'"></ph-input>
+        </ph-form>
+    </ph-window>
+</div>
