--- a/webapp/src/app/ph-elements/ph-input/ph-input.component.html
+++ b/webapp/src/app/ph-elements/ph-input/ph-input.component.html
@@ -2,5 +2,5 @@
     {{label}}
 </div>
 <div class="input">
-    <input />
+    <input [type]="this.type" [value]="this.value" (change)="onValueChange($event)" />
 </div>
