--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -17,6 +17,10 @@
     font-weight: 300;
 }
 
+html {
+    background-image: url( 'assets/endless-constellation.svg' );
+}
+
 html, body {
     margin: 0;
     padding: 0;
