--- a/webapp/src/app/auth/auth.component.scss
+++ b/webapp/src/app/auth/auth.component.scss
@@ -1,11 +1,20 @@
 div.dashboard {
-    background-color: #262626;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top:0; bottom: 0; left: 0; right: 0;
     overflow: hidden;
-    display: grid;
-    grid-template-columns: repeat(16, 6.25%);
-    grid-template-rows: repeat(16, 6.25%);
 
-    inset: 0;
+    div.content {
+        overflow: hidden;
+        display: grid;
+        // grid-template-columns: repeat(16, 6.25%);
+        // grid-template-rows: repeat(16, 6.25%);
+
+        grid-auto-rows: 24px;
+        grid-auto-columns: 24px;
+
+        inset: 0;
+    }
 }
