--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -4,11 +4,28 @@
 
     <div class="content">
         <div class="workspace">
-            <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/26">
+            <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/32">
                 <app-power-plant></app-power-plant>
             </ph-window>
-            <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/24; grid-column: 1/26">
+            <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/31; grid-column: 1/32">
                 <app-power-control></app-power-control>
+            </ph-window>
+            <ph-window [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 32/52">
+                <base-lockdown></base-lockdown>
+            </ph-window>
+            <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/31; grid-column: 32/52">
+                <ph-table>
+                    <tr>
+                        <td>
+                            peter
+                        </td>
+                        <td>
+                            pan
+                        </td>
+                    </tr>
+                </ph-table>
+            </ph-window>
+            <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:31/52; grid-column: 32/52">
             </ph-window>
         </div>
     </div>
