--- a/webapp/src/app/power-control/power-control.component.scss
+++ b/webapp/src/app/power-control/power-control.component.scss
@@ -5,154 +5,154 @@
     align-items: center;
 }
 
-@keyframes move1 {
-    0% {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-    }
-    50% {
-        opacity: 1;
-        transform: translate3d(-4.5%, 0, 0);
-    }
-    51% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0;
-        transform: translate3d(0, 0, 0);
+// @keyframes move1 {
+//     0% {
+//         opacity: 1;
+//         transform: translate3d(0, 0, 0);
+//     }
+//     50% {
+//         opacity: 1;
+//         transform: translate3d(-4.5%, 0, 0);
+//     }
+//     51% {
+//         opacity: 0;
+//     }
+//     100% {
+//         opacity: 0;
+//         transform: translate3d(0, 0, 0);
 
-    }
-}
+//     }
+// }
 
-@keyframes move2 {
-    0% {
-        opacity: 0;
-    }
-    49% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-        transform: translate3d(-0.08%, 0, 0);
-    }
-    100% {
-        transform: translate3d(-5%, 0, 0);
-    }
-}
+// @keyframes move2 {
+//     0% {
+//         opacity: 0;
+//     }
+//     49% {
+//         opacity: 0;
+//     }
+//     50% {
+//         opacity: 1;
+//         transform: translate3d(-0.08%, 0, 0);
+//     }
+//     100% {
+//         transform: translate3d(-5%, 0, 0);
+//     }
+// }
 
-@keyframes move3 {
-    0% { 
-        transform: translate3d(0, 0, 0);
-    }
-    55% {
-        transform: translate3d(0, -27.5%, 0);
-    }
-    100% {
-        transform: translate3d(-13.4%, -27.5%, 0);
-    }
-}
+// @keyframes move3 {
+//     0% { 
+//         transform: translate3d(0, 0, 0);
+//     }
+//     55% {
+//         transform: translate3d(0, -27.5%, 0);
+//     }
+//     100% {
+//         transform: translate3d(-13.4%, -27.5%, 0);
+//     }
+// }
 
-@keyframes moveUG {
-    0% { 
-        transform: translate3d(0, 0, 0);
-    }
-    100% {
-        transform: translate3d(71%, 0, 0);
-    }
-}
+// @keyframes moveUG {
+//     0% { 
+//         transform: translate3d(0, 0, 0);
+//     }
+//     100% {
+//         transform: translate3d(71%, 0, 0);
+//     }
+// }
 
-#Ebene_5 {
-    animation: move1 2s  linear infinite;
-}
+// #Ebene_5 {
+//     animation: move1 2s  linear infinite;
+// }
 
-#Ebene_4 {
-    animation: move2 2s  linear infinite;
-    opacity: 1;
-}
+// #Ebene_4 {
+//     animation: move2 2s  linear infinite;
+//     opacity: 1;
+// }
 
-#Ebene_7 {
-    animation: move1 2s  linear infinite;
-}
+// #Ebene_7 {
+//     animation: move1 2s  linear infinite;
+// }
 
-#Ebene_6 {
-    animation: move2 2s  linear infinite;
-    opacity: 1;
-}
+// #Ebene_6 {
+//     animation: move2 2s  linear infinite;
+//     opacity: 1;
+// }
 
-#Ebene_8 {
-    circle {
-        animation: move3 4s  linear infinite;
-    }
-    circle:nth-child(2) {
-        animation-delay: -1.2s;
-    }
-    circle:nth-child(3) {
-        animation-delay: -2.4s;
-    }
-    // circle:nth-child(4) {
-    //     animation-delay: -2.7s;
-    // }
-}
+// #Ebene_8 {
+//     circle {
+//         animation: move3 4s  linear infinite;
+//     }
+//     circle:nth-child(2) {
+//         animation-delay: -1.2s;
+//     }
+//     circle:nth-child(3) {
+//         animation-delay: -2.4s;
+//     }
+//     // circle:nth-child(4) {
+//     //     animation-delay: -2.7s;
+//     // }
+// }
 
-#UG1_P2 {
-    circle {
-        animation: moveUG 14s  linear infinite;
-    }
-    circle:nth-child(2) {
-        animation-delay: -1.75s;
-    }
-    circle:nth-child(3) {
-        animation-delay: -3.5s;
-    }
-    circle:nth-child(4) {
-        animation-delay: -5.25s;
-    }
-    circle:nth-child(5) {
-        animation-delay: -7s;
-    }
-    circle:nth-child(6) {
-        animation-delay: -8.75s;
-    }
-    circle:nth-child(7) {
-        animation-delay: -10.5s;
-    }
-    circle:nth-child(8) {
-        animation-delay: -12.25s;
-    }
-}
+// #UG1_P2 {
+//     circle {
+//         animation: moveUG 14s  linear infinite;
+//     }
+//     circle:nth-child(2) {
+//         animation-delay: -1.75s;
+//     }
+//     circle:nth-child(3) {
+//         animation-delay: -3.5s;
+//     }
+//     circle:nth-child(4) {
+//         animation-delay: -5.25s;
+//     }
+//     circle:nth-child(5) {
+//         animation-delay: -7s;
+//     }
+//     circle:nth-child(6) {
+//         animation-delay: -8.75s;
+//     }
+//     circle:nth-child(7) {
+//         animation-delay: -10.5s;
+//     }
+//     circle:nth-child(8) {
+//         animation-delay: -12.25s;
+//     }
+// }
 
-#UG1_P1 {
-    circle {
-        animation: moveUG 14s  linear infinite;
-    }
-    circle:nth-child(2) {
-        animation-delay: -1.75s;
-    }
-    circle:nth-child(3) {
-        animation-delay: -3.5s;
-    }
-    circle:nth-child(4) {
-        animation-delay: -5.25s;
-    }
-    circle:nth-child(5) {
-        animation-delay: -7s;
-    }
-    circle:nth-child(6) {
-        animation-delay: -8.75s;
-    }
-    circle:nth-child(7) {
-        animation-delay: -10.5s;
-    }
-    circle:nth-child(8) {
-        animation-delay: -12.25s;
-    }
-}
+// #UG1_P1 {
+//     circle {
+//         animation: moveUG 14s  linear infinite;
+//     }
+//     circle:nth-child(2) {
+//         animation-delay: -1.75s;
+//     }
+//     circle:nth-child(3) {
+//         animation-delay: -3.5s;
+//     }
+//     circle:nth-child(4) {
+//         animation-delay: -5.25s;
+//     }
+//     circle:nth-child(5) {
+//         animation-delay: -7s;
+//     }
+//     circle:nth-child(6) {
+//         animation-delay: -8.75s;
+//     }
+//     circle:nth-child(7) {
+//         animation-delay: -10.5s;
+//     }
+//     circle:nth-child(8) {
+//         animation-delay: -12.25s;
+//     }
+// }
 
-.hidden {
-    display: none;
-}
+// .hidden {
+//     display: none;
+// }
 
-circle.btn {
-    cursor: pointer;
-}
+// circle.btn {
+//     cursor: pointer;
+// }
 
