Added annoucement component concept

--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -14,16 +14,7 @@
                 <base-lockdown></base-lockdown>
             </ph-window>
             <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/31; grid-column: 32/52">
-                <ph-table>
-                    <tr>
-                        <td>
-                            peter
-                        </td>
-                        <td>
-                            pan
-                        </td>
-                    </tr>
-                </ph-table>
+                <speaker-announcements></speaker-announcements>
             </ph-window>
             <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:31/52; grid-column: 32/52">
             </ph-window>
