--- a/webapp/src/app/ph-elements/ph-table/ph-table.component.html
+++ b/webapp/src/app/ph-elements/ph-table/ph-table.component.html
@@ -1,3 +1,10 @@
-<table>
-    <ng-content></ng-content>
-</table>
+<div class="label">
+    {{label}}
+</div>
+<div class="table">
+    <table cellspacing="0">
+        <ng-content></ng-content>
+    </table>
+</div>
+
+
