--- a/webapp/src/app/ph-elements/ph-button/ph-button.component.scss
+++ b/webapp/src/app/ph-elements/ph-button/ph-button.component.scss
@@ -9,6 +9,7 @@
         font-family: 'Fira Code';
         font-size: 12px;
         color: #a9aaac;
+        text-align: center;
         line-height: 18px;
         padding: 1px 10px 0px 10px;
 
