--- a/webapp/src/app/speaker-announcements/speaker-announcements.component.html
+++ b/webapp/src/app/speaker-announcements/speaker-announcements.component.html
@@ -4,14 +4,9 @@
         <th>File</th>
         <th style="width: 64px;">Command</th>
     </tr>
-    <tr>
-        <td>0</td>
-        <td>Durchsage.wav</td>
-        <td><ph-button [value]="'Play'">PLAY</ph-button></td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>Durchsage.wav</td>
-        <td><ph-button [value]="'Play'">PLAY</ph-button></td>
+    <tr *ngFor="let file of announcementFiles; index as idx">
+        <td>{{idx}}</td>
+        <td>{{file}}</td>
+        <td><ph-button [value]="file">PLAY</ph-button></td>
     </tr>
 </ph-table>
