--- a/webapp/src/app/dashboard/dashboard.component.scss
+++ b/webapp/src/app/dashboard/dashboard.component.scss
@@ -15,14 +15,11 @@ div.dashboard {
         grid-row: 2;
         grid-column: 2;
         display: flex;
+        justify-content: center;
         align-items: center;
-        position: absolute;
-
         overflow: hidden;
 
         div.workspace {
-
-
             display: grid;
             grid-auto-rows: 24px;
             grid-auto-columns: 24px;
