--- a/webapp/src/app/base-lockdown/base-lockdown.component.html
+++ b/webapp/src/app/base-lockdown/base-lockdown.component.html
@@ -1,13 +1,13 @@
 <ph-form>
-    <ph-button-select [label]="'State'">
+    <ph-button-select [label]="'State'" [(value)]="baseState" (valueChange)="updateServerBaseState()">
         <ph-button [value]="'lockdown'">LOCKDOWN</ph-button>
         <ph-button [value]="'normal'">NORMAL</ph-button>
     </ph-button-select>
-    <ph-button-select [label]="'Automatic lockdown'">
+    <ph-button-select [label]="'Automatic lockdown'" [(value)]="autoLockdown" (valueChange)="updateAutoLockdown()">
         <ph-button [value]="'off'">OFF</ph-button>
         <ph-button [value]="'on'">ON</ph-button>
     </ph-button-select>
-    <ph-button-select [label]="'Play announcements'">
+    <ph-button-select [label]="'Play announcements'" [(value)]="lockdownAnnouncements" (valueChange)="updateLockdownAnnouncements()">
         <ph-button [value]="'off'">OFF</ph-button>
         <ph-button [value]="'on'">ON</ph-button>
     </ph-button-select>
