--- a/webapp/src/app/ph-elements/ph-window/ph-window.component.scss
+++ b/webapp/src/app/ph-elements/ph-window/ph-window.component.scss
@@ -31,6 +31,9 @@ div.title-bar {
 div.workspace {
     background-color: #252526;
     margin: 0 2px 2px 2px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 // div.shader {
