--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,8 @@
             <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 32/52">
                 <speaker-announcements></speaker-announcements>
             </ph-window>
-            <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/32; grid-column: 32/52">
+            <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/31; grid-column: 32/52">
+                <speaker-fluff></speaker-fluff>
             </ph-window>
         </div>
     </div>
