Added direct audio play and part of new power grid

--- a/webapp/src/app/power-control/power-control.component.html
+++ b/webapp/src/app/power-control/power-control.component.html
@@ -1,157 +1,159 @@
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 636 502">
-  <defs>
-    <style>
-      .cls-1 {
-        fill: #42a1da;
-      }
-
-      .cls-2, .cls-3 {
-        stroke: #afafaf;
-        stroke-width: .75px;
-      }
-
-      .cls-2, .cls-3, .cls-4, .cls-5 {
-        fill: none;
-        stroke-miterlimit: 10;
-      }
-
-      .cls-2, .cls-4, .cls-5 {
-        stroke-linecap: square;
-      }
-
-      .cls-4, .cls-5 {
-        stroke: #42a1da;
-      }
-
-      .cls-5 {
-        stroke-width: 2px;
-      }
-    </style>
-  </defs>
-  <g id="OG">
-    <g id="Frame">
-      <line class="cls-3" x1="145.78" y1="178.11" x2="319.19" y2="178.11"/>
-      <line class="cls-2" x1="145.78" y1="178.11" x2="145.78" y2="312.11"/>
-      <line class="cls-2" x1="145.78" y1="312.11" x2="606.22" y2="312.11"/>
-      <line class="cls-2" x1="606.22" y1="312.11" x2="606.22" y2="178.11"/>
-      <line class="cls-2" x1="341" y1="178.11" x2="606.22" y2="178.11"/>
-      <line class="cls-2" x1="319.19" y1="178.11" x2="319.19" y2="132.5"/>
-      <line class="cls-2" x1="319.97" y1="24.89" x2="370.3" y2="24.89"/>
-      <line class="cls-2" x1="370.3" y1="52.76" x2="370.3" y2="24.89"/>
-      <line class="cls-2" x1="385.59" y1="52.76" x2="370.3" y2="52.76"/>
-      <line class="cls-2" x1="385.59" y1="33.79" x2="385.59" y2="51.79"/>
-      <line class="cls-2" x1="435.33" y1="33.79" x2="385.59" y2="33.79"/>
-      <line class="cls-2" x1="435.33" y1="178.11" x2="435.33" y2="33.79"/>
-      <line class="cls-2" x1="582.81" y1="226.56" x2="582.81" y2="275.53"/>
-      <line class="cls-2" x1="606.22" y1="271.66" x2="582.81" y2="271.66"/>
-      <line class="cls-2" x1="582.81" y1="312.11" x2="582.81" y2="291.21"/>
-      <line class="cls-2" x1="582.81" y1="178.11" x2="582.81" y2="211.47"/>
-      <line class="cls-2" x1="595.11" y1="211.47" x2="582.81" y2="211.47"/>
-      <line class="cls-2" x1="373.19" y1="133.79" x2="373.19" y2="178.11"/>
-      <line class="cls-2" x1="340.49" y1="132.5" x2="340.49" y2="178.11"/>
-      <line class="cls-2" x1="370.17" y1="113.34" x2="435.33" y2="113.34"/>
-      <line class="cls-2" x1="319.19" y1="113.34" x2="319.19" y2="24.89"/>
-      <line class="cls-2" x1="350.56" y1="113.34" x2="319.19" y2="113.34"/>
-      <line class="cls-2" x1="169.58" y1="251.34" x2="169.58" y2="178.5"/>
-      <line class="cls-2" x1="169.58" y1="211.66" x2="145.78" y2="211.66"/>
-      <line class="cls-2" x1="169.58" y1="263.34" x2="145.78" y2="263.34"/>
-      <rect class="cls-2" x="184.12" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="268.36" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="226.25" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="310.55" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="353.13" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="437.25" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="395.19" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="479.96" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="522.28" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="564.22" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="184.12" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="226.25" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="268.36" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="310.55" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="353.13" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="395.19" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="437.25" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="479.96" y="220" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="522.28" y="263.16" width="4.14" height="4.14"/>
-      <rect class="cls-2" x="564.22" y="220" width="4.14" height="4.14"/>
-    </g>
-    <g id="Ebene_3" data-name="Ebene 3">
-      <circle class="cls-4" cx="566.3" cy="289.7" r="3.14"/>
-      <circle class="cls-1" cx="566.3" cy="289.7" r="1.94"/>
-      <line class="cls-5" x1="562.49" y1="289.7" x2="186.23" y2="289.7"/>
-      <circle class="cls-1" cx="186.23" cy="289.7" r="1.94"/>
-    </g>
-    <g id="tec">
-      <line class="cls-5" x1="595" y1="251" x2="595" y2="198"/>
-      <circle class="cls-1" cx="595" cy="255" r="2"/>
-      <circle class="cls-1" cx="547" cy="196" r="2"/>
-      <line class="cls-5" x1="595" y1="196.02" x2="547" y2="195.98"/>
-      <circle class="cls-4" cx="595" cy="255" r="3.14"/>
-    </g>
-    <g id="sci">
-      <circle class="cls-1" cx="459" cy="197" r="2"/>
-      <line class="cls-5" x1="505" y1="197.02" x2="459" y2="196.98"/>
-      <circle class="cls-1" cx="509" cy="197" r="2"/>
-      <circle class="cls-4" cx="509" cy="197" r="3.14"/>
-    </g>
-  </g>
-  <g id="Ebene_2" data-name="Ebene 2">
-    <g id="UG1">
-      <line class="cls-2" x1="606.83" y1="345.01" x2="606.83" y2="479.5"/>
-      <line class="cls-2" x1="606.73" y1="344.99" x2="48.17" y2="344.99"/>
-      <line class="cls-3" x1="48.17" y1="345.01" x2="48.17" y2="398.01"/>
-      <line class="cls-2" x1="73.17" y1="479.5" x2="87.17" y2="479.5"/>
-      <line class="cls-2" x1="606.17" y1="479.5" x2="103.17" y2="479.5"/>
-      <line class="cls-2" x1="371.17" y1="345.01" x2="371" y2="397.5"/>
-      <line class="cls-2" x1="370.5" y1="425.5" x2="371.17" y2="479.5"/>
-      <line class="cls-2" x1="105.17" y1="345.01" x2="105.17" y2="397.01"/>
-      <line class="cls-2" x1="116.17" y1="397.01" x2="105.17" y2="397.01"/>
-      <line class="cls-2" x1="126.17" y1="397.01" x2="138.17" y2="397.01"/>
-      <line class="cls-2" x1="138.17" y1="345.01" x2="138.17" y2="397.01"/>
-      <line class="cls-2" x1="105.17" y1="479.5" x2="105.17" y2="429.01"/>
-      <line class="cls-2" x1="117.17" y1="429.01" x2="105.17" y2="429.01"/>
-      <line class="cls-2" x1="126.17" y1="429.01" x2="138.17" y2="429.01"/>
-      <line class="cls-2" x1="138.17" y1="479.5" x2="138.17" y2="429.01"/>
-      <line class="cls-3" x1="19.17" y1="398.01" x2="48.17" y2="398.01"/>
-      <line class="cls-2" x1="19.17" y1="429.01" x2="19.17" y2="398.01"/>
-      <line class="cls-2" x1="19.17" y1="429.01" x2="73.17" y2="429.01"/>
-      <line class="cls-2" x1="73.17" y1="429.01" x2="73.17" y2="479.5"/>
-      <rect class="cls-2" x="181.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="228.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="275.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="322.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="414.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="461.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="508.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="555.5" y="425.5" width="4" height="4"/>
-      <rect class="cls-2" x="555.5" y="393.5" width="4" height="4"/>
-      <rect class="cls-2" x="508.5" y="393.5" width="4" height="4"/>
-      <rect class="cls-2" x="461.5" y="393.5" width="4" height="4"/>
-      <rect class="cls-2" x="414.5" y="393.5" width="4" height="4"/>
-      <rect class="cls-2" x="275.5" y="393.5" width="4" height="4"/>
-      <rect class="cls-2" x="181.5" y="393.5" width="4" height="4"/>
-      <rect class="cls-2" x="228.5" y="393.5" width="4" height="4"/>
-      <rect class="cls-2" x="322.5" y="393.5" width="4" height="4"/>
-    </g>
-    <g id="UG1_PL">
-      <circle class="cls-4" cx="158.82" cy="458.41" r="3.61"/>
-      <circle class="cls-1" cx="158.82" cy="458.41" r="2.23"/>
-      <line class="cls-5" x1="163.24" y1="458.41" x2="596.28" y2="458.41"/>
-      <circle class="cls-1" cx="596.44" cy="458.41" r="2.23"/>
-      <circle class="cls-4" cx="160.03" cy="370.25" r="3.61"/>
-      <circle class="cls-1" cx="160.03" cy="370.25" r="2.23"/>
-      <line class="cls-5" x1="164.45" y1="370.25" x2="597.48" y2="370.25"/>
-      <circle class="cls-1" cx="597.64" cy="370.25" r="2.23"/>
-    </g>
-    <g id="UG1_P1">
-      <circle class="cls-1" cx="158.85" cy="458.5" r="1.81"/>
-      <circle class="cls-1" cx="158.85" cy="458.5" r="1.81"/>
-      <circle class="cls-1" cx="158.85" cy="458.5" r="1.81"/>
-      <circle class="cls-1" cx="158.85" cy="458.5" r="1.81"/>
-    </g>
-    <g id="UG__P2" data-name="UG!_P2">
-      <circle class="cls-1" cx="160.03" cy="370.25" r="1.81"/>
-    </g>
-  </g>
+<svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 636 502" style="enable-background:new 0 0 636 502;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:none;stroke:#AFAFAF;stroke-width:0.75;stroke-miterlimit:10;}
+	.st1{fill:none;stroke:#AFAFAF;stroke-width:0.75;stroke-linecap:square;stroke-miterlimit:10;}
+	.st2{fill:rgba(0,0,0,0);stroke:#42A1DA;stroke-linecap:square;stroke-miterlimit:10;}
+	.st3{fill:#42A1DA;}
+	.st4{fill:none;stroke:#42A1DA;stroke-width:2;stroke-linecap:square;stroke-miterlimit:10;}
+	.st5{display:none;fill:#42A1DA;}
+</style>
+<g id="OG">
+	<g id="Frame">
+		<line class="st0" x1="145.8" y1="178.1" x2="319.2" y2="178.1"/>
+		<line class="st1" x1="145.8" y1="178.1" x2="145.8" y2="312.1"/>
+		<line class="st1" x1="145.8" y1="312.1" x2="606.2" y2="312.1"/>
+		<line class="st1" x1="606.2" y1="312.1" x2="606.2" y2="178.1"/>
+		<line class="st1" x1="341" y1="178.1" x2="606.2" y2="178.1"/>
+		<line class="st1" x1="319.2" y1="178.1" x2="319.2" y2="132.5"/>
+		<line class="st1" x1="320" y1="24.9" x2="370.3" y2="24.9"/>
+		<line class="st1" x1="370.3" y1="52.8" x2="370.3" y2="24.9"/>
+		<line class="st1" x1="385.6" y1="52.8" x2="370.3" y2="52.8"/>
+		<line class="st1" x1="385.6" y1="33.8" x2="385.6" y2="51.8"/>
+		<line class="st1" x1="435.3" y1="33.8" x2="385.6" y2="33.8"/>
+		<line class="st1" x1="435.3" y1="178.1" x2="435.3" y2="33.8"/>
+		<line class="st1" x1="582.8" y1="226.6" x2="582.8" y2="275.5"/>
+		<line class="st1" x1="606.2" y1="271.7" x2="582.8" y2="271.7"/>
+		<line class="st1" x1="582.8" y1="312.1" x2="582.8" y2="291.2"/>
+		<line class="st1" x1="582.8" y1="178.1" x2="582.8" y2="211.5"/>
+		<line class="st1" x1="595.1" y1="211.5" x2="582.8" y2="211.5"/>
+		<line class="st1" x1="373.2" y1="133.8" x2="373.2" y2="178.1"/>
+		<line class="st1" x1="340.5" y1="132.5" x2="340.5" y2="178.1"/>
+		<line class="st1" x1="370.2" y1="113.3" x2="435.3" y2="113.3"/>
+		<line class="st1" x1="319.2" y1="113.3" x2="319.2" y2="24.9"/>
+		<line class="st1" x1="350.6" y1="113.3" x2="319.2" y2="113.3"/>
+		<line class="st1" x1="169.6" y1="251.3" x2="169.6" y2="178.5"/>
+		<line class="st1" x1="169.6" y1="211.7" x2="145.8" y2="211.7"/>
+		<line class="st1" x1="169.6" y1="263.3" x2="145.8" y2="263.3"/>
+		<rect x="184.1" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="268.4" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="226.2" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="310.5" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="353.1" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="437.2" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="395.2" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="480" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="522.3" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="564.2" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="184.1" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="226.2" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="268.4" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="310.5" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="353.1" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="395.2" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="437.2" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="480" y="220" class="st1" width="4.1" height="4.1"/>
+		<rect x="522.3" y="263.2" class="st1" width="4.1" height="4.1"/>
+		<rect x="564.2" y="220" class="st1" width="4.1" height="4.1"/>
+	</g>
+	<g id="Ebene_3">
+		<circle class="st2" cx="566.3" cy="289.7" r="3.1"/>
+		<circle class="st3" cx="566.3" cy="289.7" r="1.9"/>
+		<line class="st4" x1="562.5" y1="289.7" x2="186.2" y2="289.7"/>
+		<circle class="st3" cx="186.2" cy="289.7" r="1.9"/>
+	</g>
+	<g id="tec" [ngClass]="{'animate': this.poweredStateTec}">
+		<line class="st4" x1="595" y1="251" x2="595" y2="198"/>
+		<circle class="st3" cx="595" cy="255" r="2"/>
+		<circle class="st3" cx="547" cy="196" r="2"/>
+		<line class="st4" x1="595" y1="196" x2="547" y2="196"/>
+		<circle class="st3" cx="595" cy="255" r="2"/>
+		<circle class="st3" cx="595" cy="255" r="2"/>
+		<circle class="st3" cx="595" cy="255" r="2"/>
+		<circle class="st3" cx="595" cy="255" r="2"/>
+		<circle class="st3" cx="595" cy="255" r="2"/>
+		<circle class="st2" cx="595" cy="255" r="3.1" (click)="this.poweredStateTec = !this.poweredStateTec;"/>
+	</g>
+	<g id="sci" [ngClass]="{'animate': this.poweredStateSci}">
+		<circle class="st3" cx="459" cy="197" r="2"/>
+		<line class="st4" x1="505" y1="197" x2="459" y2="197"/>
+		<circle class="st3" cx="509" cy="197" r="2"/>
+		<circle class="st3" cx="509" cy="197" r="2"/>
+		<circle class="st3" cx="509" cy="197" r="2"/>
+		<circle class="st3" cx="509" cy="197" r="2"/>
+		<circle class="st2" cx="509" cy="197" r="3.1" (click)="this.poweredStateSci = !this.poweredStateSci; blub()"/>
+	</g>
+	<g id="med">
+		<circle class="st3" cx="338.1" cy="77.4" r="2"/>
+		<line class="st4" x1="414.9" y1="77.4" x2="338.1" y2="77.3"/>
+		<circle class="st3" cx="418.9" cy="77.4" r="2"/>
+		<circle class="st2" cx="418.9" cy="77.3" r="3.1"/>
+	</g>
+	<g id="cic">
+		<circle class="st3" cx="357.5" cy="156.4" r="2"/>
+		<line class="st4" x1="418.9" y1="124.1" x2="358.5" y2="124.1"/>
+		<circle class="st3" cx="420" cy="156.4" r="2"/>
+		<circle class="st2" cx="420" cy="156.4" r="3.1"/>
+		<line class="st4" x1="357.5" y1="124.1" x2="357.4" y2="154.1"/>
+		<line class="st4" x1="420" y1="124.1" x2="420" y2="152.5"/>
+	</g>
+	<g id="adm">
+		<circle class="st3" cx="186.3" cy="198" r="2"/>
+		<line class="st4" x1="287.2" y1="198" x2="186.3" y2="197.9"/>
+		<circle class="st3" cx="291.4" cy="198" r="2"/>
+		<circle class="st2" cx="291.4" cy="198" r="3.1"/>
+	</g>
+</g>
+<g id="UG">
+	<circle class="st5" cx="597.6" cy="370.2" r="2.2"/>
+	<g id="Frame_00000115486158435622287280000013904902335641268907_">
+		<line class="st1" x1="606.8" y1="345" x2="606.8" y2="479.5"/>
+		<line class="st1" x1="606.7" y1="345" x2="48.2" y2="345"/>
+		<line class="st0" x1="48.2" y1="345" x2="48.2" y2="398"/>
+		<line class="st1" x1="73.2" y1="479.5" x2="87.2" y2="479.5"/>
+		<line class="st1" x1="606.2" y1="479.5" x2="103.2" y2="479.5"/>
+		<line class="st1" x1="371.2" y1="345" x2="371" y2="397.5"/>
+		<line class="st1" x1="370.5" y1="425.5" x2="371.2" y2="479.5"/>
+		<line class="st1" x1="105.2" y1="345" x2="105.2" y2="397"/>
+		<line class="st1" x1="116.2" y1="397" x2="105.2" y2="397"/>
+		<line class="st1" x1="126.2" y1="397" x2="138.2" y2="397"/>
+		<line class="st1" x1="138.2" y1="345" x2="138.2" y2="397"/>
+		<line class="st1" x1="105.2" y1="479.5" x2="105.2" y2="429"/>
+		<line class="st1" x1="117.2" y1="429" x2="105.2" y2="429"/>
+		<line class="st1" x1="126.2" y1="429" x2="138.2" y2="429"/>
+		<line class="st1" x1="138.2" y1="479.5" x2="138.2" y2="429"/>
+		<line class="st0" x1="19.2" y1="398" x2="48.2" y2="398"/>
+		<line class="st1" x1="19.2" y1="429" x2="19.2" y2="398"/>
+		<line class="st1" x1="19.2" y1="429" x2="73.2" y2="429"/>
+		<line class="st1" x1="73.2" y1="429" x2="73.2" y2="479.5"/>
+		<rect x="181.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="228.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="275.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="322.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="414.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="461.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="508.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="555.5" y="425.5" class="st1" width="4" height="4"/>
+		<rect x="555.5" y="393.5" class="st1" width="4" height="4"/>
+		<rect x="508.5" y="393.5" class="st1" width="4" height="4"/>
+		<rect x="461.5" y="393.5" class="st1" width="4" height="4"/>
+		<rect x="414.5" y="393.5" class="st1" width="4" height="4"/>
+		<rect x="275.5" y="393.5" class="st1" width="4" height="4"/>
+		<rect x="181.5" y="393.5" class="st1" width="4" height="4"/>
+		<rect x="228.5" y="393.5" class="st1" width="4" height="4"/>
+		<rect x="322.5" y="393.5" class="st1" width="4" height="4"/>
+	</g>
+	<g id="rwall">
+		<circle class="st2" cx="90.8" cy="462" r="3.6"/>
+		<circle class="st3" cx="90.8" cy="462" r="2.2"/>
+		<line class="st4" x1="90.8" y1="457.8" x2="90.8" y2="372.5"/>
+		<circle class="st3" cx="90.8" cy="370.2" r="2.2"/>
+	</g>
+	<g id="kitchen">
+		<circle class="st2" cx="121.2" cy="370.2" r="2.6"/>
+		<circle class="st3" cx="121.2" cy="370.2" r="1.6"/>
+		<line class="st4" x1="124.4" y1="370.2" x2="157.8" y2="370.2"/>
+		<circle class="st3" cx="160" cy="370.2" r="2.2"/>
+	</g>
+</g>
 </svg>
